[tool.poetry]
name = "drf-filters-chain-experimentations"
version = "0.1.0"
description = ""
authors = ["Vitor Azevedo <vitor.azevedo009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
drf-spectacular = "^0.27.2"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
